syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.univer.base.grpc.account";
option java_outer_classname = "Account";

package account;

service AccountService {
    rpc detail (AccountRequest) returns (AccountResponse) {};
    rpc listByIds (AccountRequest) returns (AccountResponse) {};
    rpc findDictByType(AccountRequest) returns (AccountResponse);
    rpc findMapByType(AccountRequest) returns (AccountResponse);
    rpc findNameByUserId(AccountRequest) returns(AccountResponse){};
}

message AccountRequest {
    string json = 1;
}

message AccountResponse {
    string json = 1;
}
